--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.autoSave": "afterDelay",
     "java.project.sourcePaths": [
-        "RegexTestHarness"
+        "RegexTestHarness",
+        "Introduction",
+        "Oracle"
     ],
     
 }
