--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
     "files.autoSave": "afterDelay",
     "java.project.sourcePaths": [
         "RegexTestHarness",
+        "Oracle",
         "Introduction",
-        "Oracle"
+        ""
     ],
     
 }
